fix WidgetComboBox#initFromEnum